// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionDetails Components renders TransactionDetailsContent without error 1`] = `
<View
  style={
    {
      "flexDirection": "column",
    }
  }
>
  <View
    cancelable={true}
    disabled={false}
    focusable={true}
    hitSlop={[Function]}
    minPressDuration={0}
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    style={
      {
        "flexDirection": "column",
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "column",
          "gap": 8,
          "justifyContent": "center",
          "paddingBottom": 32,
          "paddingLeft": 32,
          "paddingRight": 32,
          "paddingTop": 32,
        }
      }
    >
      <Text
        allowFontScaling={false}
        maxFontSizeMultiplier={1.2}
        style={
          {
            "color": "#222222",
            "fontFamily": "Basel Grotesk",
            "fontSize": 24,
            "fontWeight": "400",
            "lineHeight": 32,
          }
        }
        suppressHighlighting={true}
      />
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "justifyContent": "center",
          }
        }
      >
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={1.4}
          style={
            {
              "color": "#7D7D7D",
              "fontFamily": "Basel Grotesk",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            }
          }
          suppressHighlighting={true}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`TransactionDetails Components renders TransactionDetailsHeader without error 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "flexShrink": 1,
        "gap": 12,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "column",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "column",
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          }
        }
      >
        <View
          style={
            {
              "bottom": -4,
              "flexDirection": "column",
              "position": "absolute",
              "right": -4,
              "zIndex": 10,
            }
          }
        >
          <View
            style={
              {
                "borderColor": "#FFFFFF",
                "borderRadius": 6.3,
                "borderStyle": "solid",
                "borderWidth": 1.5,
                "flexDirection": "column",
                "height": 21,
                "overflow": "hidden",
                "width": 21,
                "zIndex": 10,
              }
            }
            testID="network-logo"
          >
            <div
              className="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
              dir={null}
              style={
                {
                  "height": "18px",
                  "width": "18px",
                }
              }
            >
              <div
                className="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-ehq7j7"
                dir={null}
                style={
                  {
                    "backgroundImage": "url("mock-asset-BLAST_LOGO.png")",
                  }
                }
                suppressHydrationWarning={true}
              />
              <img
                alt=""
                className="css-accessibilityImage-9pa8cd"
                draggable={false}
                src="mock-asset-BLAST_LOGO.png"
              />
            </div>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "flexDirection": "column",
          "flexShrink": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
            "justifyContent": "flex-start",
          }
        }
      >
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={1.4}
          style={
            {
              "color": "#222222",
              "fontFamily": "Basel Grotesk",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            }
          }
          suppressHighlighting={true}
        >
          Approved
        </Text>
      </View>
      <Text
        allowFontScaling={false}
        maxFontSizeMultiplier={1.4}
        style={
          {
            "color": "#7D7D7D",
            "fontFamily": "Basel Grotesk",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 16,
          }
        }
        suppressHighlighting={true}
      >
        January 1, 2023 12:00 AM
      </Text>
    </View>
  </View>
  <View
    cancelable={true}
    disabled={false}
    focusable={true}
    hitSlop={[Function]}
    minPressDuration={0}
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    style={
      {
        "flexDirection": "column",
        "flexGrow": 0,
        "marginLeft": 12,
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
      }
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={20}
      bbWidth={20}
      fill="none"
      focusable={false}
      meetOrSlice={0}
      minX={0}
      minY={0}
      strokeWidth={8}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "color": "#7D7D7D",
            "height": 20,
            "width": 20,
          },
          {
            "flex": 0,
            "height": 20,
            "width": 20,
          },
        ]
      }
      vbHeight={4}
      vbWidth={18}
    >
      <RNSVGGroup
        color="#7D7D7D"
        fill={null}
        propList={
          [
            "fill",
            "strokeWidth",
          ]
        }
        strokeWidth={8}
      >
        <RNSVGPath
          d="M9 3C9.55228 3 10 2.55228 10 2C10 1.44772 9.55228 1 9 1C8.44772 1 8 1.44772 8 2C8 2.55228 8.44772 3 9 3Z"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "type": 2,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth="2"
        />
        <RNSVGPath
          d="M16 3C16.5523 3 17 2.55228 17 2C17 1.44772 16.5523 1 16 1C15.4477 1 15 1.44772 15 2C15 2.55228 15.4477 3 16 3Z"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "type": 2,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth="2"
        />
        <RNSVGPath
          d="M2 3C2.55228 3 3 2.55228 3 2C3 1.44772 2.55228 1 2 1C1.44772 1 1 1.44772 1 2C1 2.55228 1.44772 3 2 3Z"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "type": 2,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth="2"
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`TransactionDetails Components renders TransactionDetailsInfoRows without error with isShowingMore false 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "gap": 8,
      "paddingLeft": 8,
      "paddingRight": 8,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      allowFontScaling={false}
      maxFontSizeMultiplier={1.4}
      style={
        {
          "color": "#7D7D7D",
          "fontFamily": "Basel Grotesk",
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 20,
        }
      }
      suppressHighlighting={true}
    >
      Network cost
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          {
            "borderColor": "#FFFFFF",
            "borderRadius": 4.8,
            "borderStyle": "solid",
            "borderWidth": 0,
            "flexDirection": "column",
            "height": 16,
            "overflow": "hidden",
            "width": 16,
            "zIndex": 10,
          }
        }
        testID="network-logo"
      >
        <div
          className="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
          dir={null}
          style={
            {
              "height": "16px",
              "width": "16px",
            }
          }
        >
          <div
            className="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-ehq7j7"
            dir={null}
            style={
              {
                "backgroundImage": "url("mock-asset-BLAST_LOGO.png")",
              }
            }
            suppressHydrationWarning={true}
          />
          <img
            alt=""
            className="css-accessibilityImage-9pa8cd"
            draggable={false}
            src="mock-asset-BLAST_LOGO.png"
          />
        </div>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      allowFontScaling={false}
      maxFontSizeMultiplier={1.4}
      style={
        {
          "color": "#7D7D7D",
          "fontFamily": "Basel Grotesk",
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 20,
        }
      }
      suppressHighlighting={true}
    >
      Transaction
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "justifyContent": "center",
        }
      }
    >
      <View
        cancelable={true}
        disabled={false}
        focusable={true}
        hitSlop={[Function]}
        minPressDuration={0}
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 6,
            "justifyContent": "center",
            "opacity": 1,
            "transform": [
              {
                "scale": 1,
              },
            ],
          }
        }
      >
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={1.4}
          style={
            {
              "color": "#222222",
              "fontFamily": "Basel Grotesk",
              "fontSize": 14,
              "fontWeight": "400",
              "lineHeight": 20,
            }
          }
          suppressHighlighting={true}
        >
          b568a9...0600
        </Text>
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={16}
          bbWidth={16}
          fill="none"
          focusable={false}
          meetOrSlice={0}
          minX={0}
          minY={0}
          strokeWidth={8}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "color": "#BFBFBF",
                "height": 16,
                "width": 16,
              },
              {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
        >
          <RNSVGGroup
            color="#BFBFBF"
            fill={null}
            propList={
              [
                "fill",
                "strokeWidth",
              ]
            }
            strokeWidth={8}
          >
            <RNSVGPath
              d="M21 4V9C21 9.552 20.553 10 20 10C19.447 10 19 9.552 19 9V6.41406L11.707 13.707C11.512 13.902 11.256 14 11 14C10.744 14 10.488 13.902 10.293 13.707C9.90197 13.316 9.90197 12.684 10.293 12.293L17.5859 5H15C14.447 5 14 4.552 14 4C14 3.448 14.447 3 15 3H20C20.13 3 20.2601 3.0269 20.3821 3.0769C20.6271 3.1779 20.8221 3.37292 20.9231 3.61792C20.9741 3.73992 21 3.87 21 4ZM20 12C19.447 12 19 12.448 19 13V17C19 18.439 18.439 19 17 19H7C5.561 19 5 18.439 5 17V7C5 5.561 5.561 5 7 5H11C11.553 5 12 4.552 12 4C12 3.448 11.553 3 11 3H7C4.458 3 3 4.458 3 7V17C3 19.542 4.458 21 7 21H17C19.542 21 21 19.542 21 17V13C21 12.448 20.553 12 20 12Z"
              fill={
                {
                  "type": 2,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;

exports[`TransactionDetails Components renders TransactionDetailsInfoRows without error with isShowingMore true 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "gap": 8,
      "paddingLeft": 8,
      "paddingRight": 8,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      allowFontScaling={false}
      maxFontSizeMultiplier={1.4}
      style={
        {
          "color": "#7D7D7D",
          "fontFamily": "Basel Grotesk",
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 20,
        }
      }
      suppressHighlighting={true}
    >
      Network cost
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          {
            "borderColor": "#FFFFFF",
            "borderRadius": 4.8,
            "borderStyle": "solid",
            "borderWidth": 0,
            "flexDirection": "column",
            "height": 16,
            "overflow": "hidden",
            "width": 16,
            "zIndex": 10,
          }
        }
        testID="network-logo"
      >
        <div
          className="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
          dir={null}
          style={
            {
              "height": "16px",
              "width": "16px",
            }
          }
        >
          <div
            className="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-ehq7j7"
            dir={null}
            style={
              {
                "backgroundImage": "url("mock-asset-BLAST_LOGO.png")",
              }
            }
            suppressHydrationWarning={true}
          />
          <img
            alt=""
            className="css-accessibilityImage-9pa8cd"
            draggable={false}
            src="mock-asset-BLAST_LOGO.png"
          />
        </div>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      allowFontScaling={false}
      maxFontSizeMultiplier={1.4}
      style={
        {
          "color": "#7D7D7D",
          "fontFamily": "Basel Grotesk",
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 20,
        }
      }
      suppressHighlighting={true}
    >
      Transaction
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "justifyContent": "center",
        }
      }
    >
      <View
        cancelable={true}
        disabled={false}
        focusable={true}
        hitSlop={[Function]}
        minPressDuration={0}
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 6,
            "justifyContent": "center",
            "opacity": 1,
            "transform": [
              {
                "scale": 1,
              },
            ],
          }
        }
      >
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={1.4}
          style={
            {
              "color": "#222222",
              "fontFamily": "Basel Grotesk",
              "fontSize": 14,
              "fontWeight": "400",
              "lineHeight": 20,
            }
          }
          suppressHighlighting={true}
        >
          b568a9...0600
        </Text>
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={16}
          bbWidth={16}
          fill="none"
          focusable={false}
          meetOrSlice={0}
          minX={0}
          minY={0}
          strokeWidth={8}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "color": "#BFBFBF",
                "height": 16,
                "width": 16,
              },
              {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
        >
          <RNSVGGroup
            color="#BFBFBF"
            fill={null}
            propList={
              [
                "fill",
                "strokeWidth",
              ]
            }
            strokeWidth={8}
          >
            <RNSVGPath
              d="M21 4V9C21 9.552 20.553 10 20 10C19.447 10 19 9.552 19 9V6.41406L11.707 13.707C11.512 13.902 11.256 14 11 14C10.744 14 10.488 13.902 10.293 13.707C9.90197 13.316 9.90197 12.684 10.293 12.293L17.5859 5H15C14.447 5 14 4.552 14 4C14 3.448 14.447 3 15 3H20C20.13 3 20.2601 3.0269 20.3821 3.0769C20.6271 3.1779 20.8221 3.37292 20.9231 3.61792C20.9741 3.73992 21 3.87 21 4ZM20 12C19.447 12 19 12.448 19 13V17C19 18.439 18.439 19 17 19H7C5.561 19 5 18.439 5 17V7C5 5.561 5.561 5 7 5H11C11.553 5 12 4.552 12 4C12 3.448 11.553 3 11 3H7C4.458 3 3 4.458 3 7V17C3 19.542 4.458 21 7 21H17C19.542 21 21 19.542 21 17V13C21 12.448 20.553 12 20 12Z"
              fill={
                {
                  "type": 2,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;
